--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
 crossbeam-channel = "0.5.8"
 single-instance = "0.3.3"
+native-dialog = "0.6.3"
 
 
 [build-dependencies]
