--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
 crossbeam-channel = "0.5.8"
 single-instance = "0.3.3"
 native-dialog = "0.6.3"
+dirs = "5.0.0"
 
 
 [build-dependencies]
